# repo-atlas

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  constants.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/schemas/: project.py
backend/app/services/: scan_service.py
backend/app/services/analyzers/: risk.py
backend/app/services/graph/: builder.py
backend/app/services/metrics/: complexity.py
backend/app/services/parsers/: js_parser.py  python_parser.py
backend/app/services/scanner/: repository_scanner.py  types.py
backend/tests/: test_api.py  test_graph.py  test_js_parser.py  test_python_parser.py  test_risk.py
demo/sample-repo/: README.md
demo/sample-repo/node-service/src/: products.ts  server.ts  (+1 more)
demo/sample-repo/python-service/: main.py
demo/sample-repo/shared/: __init__.py  orders.py  utils.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  ROADMAP.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/dashboard/: circular-deps.tsx  dashboard.tsx  detail-panel.tsx  endpoints-table.tsx  file-explorer.tsx  hotspots-table.tsx  overview-cards.tsx  scan-form.tsx
frontend/components/graph/: dependency-graph.tsx
frontend/components/ui/: badge.tsx  card.tsx
frontend/lib/: api.ts  utils.test.ts  utils.ts
frontend/types/: index.ts
(+2 files in other folders)
